# ApartBack

./: Dockerfile  README.md  compose.yaml  pyproject.toml
apart/: __init__.py  main.py  models.py
apart/routes/: crud.py  func.py
